NATTQA-ENV/force-app/main/default/objects/SBQQ__TemplateContent__c/fields/SBQQ__CustomSource__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__CustomSource__c</fullName>
    <description>URL to a VisualForce page that generates content when type is set to &quot;Custom&quot;.</description>
    <inlineHelpText>URL to a VisualForce page that generates content when type is set to &quot;Custom&quot;.</inlineHelpText>
    <label>Custom Source</label>
    <type>Url</type>
</CustomField>